--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 
 						<div id="header" class="item" data-width="400">
 							<div class="inner">
-								<h1>1.Real Madrid</h1>
-								<p>A responsive portfolio site<br />
-								template by HTML5 UP</p>
+								<h1>Best Players for Top 9 UEFA Winners</h1>
 							</div>
 						</div>
 
