--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
 						<div id="header" class="item" data-width="400">
 							<div class="inner">
-								<h1>Best Players for Top 9 UEFA Winners</h1>
+								<h1>Best Players</h1>
+								<p>Top 9 UEFA Winners</p>
 							</div>
 						</div>
 
