--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<!-- Thumb Items -->
 
 						<article class="item thumb" data-width="282">
-							<h2>You really got me</h2>
+							<h2>1. Real Madrid</h2>
 							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a>
 						</article>
 
