Changing The Teams

--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 						</article>
 
 						<article class="item thumb" data-width="384">
-							<h2>Ad Infinitum</h2>
+							<h2>2. AC Milan</h2>
 							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a>
 						</article>
 
 						<article class="item thumb" data-width="274">
-							<h2>Different.</h2>
+							<h2>3. Bayern Munchën</h2>
 							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a>
 						</article>
 
 						<article class="item thumb" data-width="282">
-							<h2>Elysium</h2>
+							<h2>4. </h2>
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
 						</article>
 
