--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 						<article class="item thumb" data-width="282">
 							<h2>1. Real Madrid</h2>
-							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a>
+							<a href="images/fulls/01.jpg" class="image"><img src="http://images.wookmark.com/220825_545_realmadridfc.jpg" alt=""></a>
 						</article>
 
 						<article class="item thumb" data-width="384">
@@ -49,12 +49,12 @@
 						</article>
 
 						<article class="item thumb" data-width="282">
-							<h2>4. </h2>
+							<h2>4. Barcelona</h2>
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
 						</article>
 
 						<article class="item thumb" data-width="476">
-							<h2>Kingdom of the Wind</h2>
+							<h2>5. Liverpool</h2>
 							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a>
 						</article>
 
