--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<div id="header" class="item" data-width="400">
 							<div class="inner">
 								<h1>Best Players</h1>
-								<p>Top 9 UEFA Winners</p>
+								<p>Top 9 Champions League Winners</p>
 							</div>
 						</div>
 
