--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 						</article>
 
 						<article class="item thumb" data-width="274">
-							<h2>3. Bayern Munchën</h2>
-							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a>
+							<h2>3. Bayern Munich</h2>
+							<a href="images/fulls/03.jpg" class="image"><img src="http://7-themes.com/data_images/out/69/7008274-bayern-munich-logo.jpg" alt=""></a>
 						</article>
 
 						<article class="item thumb" data-width="282">
