--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 						<article class="item thumb" data-width="274">
 							<h2>3. Bayern Munich</h2>
-							<a href="images/fulls/03.jpg" class="image"><img src="http://7-themes.com/data_images/out/69/7008274-bayern-munich-logo.jpg" alt=""></a>
+							<a href="images/fulls/03.jpg" class="image"><img src="http://www.boweryboogie.com/content/uploads/2014/07/Bayern-Munchen-Black-Background-Wallpaper-.jpg" alt=""></a>
 						</article>
 
 						<article class="item thumb" data-width="282">
