--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 						<article class="item thumb" data-width="282">
 							<h2>4. Barcelona</h2>
-							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+							<a href="images/fulls/04.jpg" class="image"><img src="https://d2vd5uo799806j.cloudfront.net/4/b/5/4b5de1a8c59dd56dfc526c01ccf84581.jpeg" alt=""></a>
 						</article>
 
 						<article class="item thumb" data-width="476">
