--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 						<article class="item thumb" data-width="476">
 							<h2>5. Liverpool</h2>
-							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a>
+							<a href="images/fulls/05.jpg" class="image"><img src="http://img0.cfstatic.com/wallpapers/da34f4f388b59fa7997bf9b0e291e60f_large.jpeg" alt=""></a>
 						</article>
 
 						<article class="item thumb" data-width="232">
