Change the Page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Best Players for Top 9 UEFA Winners</title>
+		<title>3 PLayers who Shook The Kop</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -26,36 +26,26 @@
 
 						<div id="header" class="item" data-width="400">
 							<div class="inner">
-								<h1>Best Players</h1>
-								<p>Top 9 Champions League Winners</p>
+								<h1>3 PLayers</h1>
+								<p>Who Shook the Kop</p>
 							</div>
 						</div>
 
 					<!-- Thumb Items -->
 
 						<article class="item thumb" data-width="282">
-							<h2>1. Real Madrid</h2>
+							<h2>1. Steven Gerrard</h2>
 							<a href="images/fulls/01.jpg" class="image"><img src="http://images.wookmark.com/220825_545_realmadridfc.jpg" alt=""></a>
 						</article>
 
 						<article class="item thumb" data-width="384">
-							<h2>2. AC Milan</h2>
+							<h2>2. Kenny Dalglish</h2>
 							<a href="images/fulls/02.jpg" class="image"><img src="https://acmilanfinance.files.wordpress.com/2013/07/cropped-ac-milan-logo-wallpaper.jpg" alt=""></a>
 						</article>
 
 						<article class="item thumb" data-width="274">
-							<h2>3. Bayern Munich</h2>
+							<h2>3. Ian Rush</h2>
 							<a href="images/fulls/03.jpg" class="image"><img src="http://www.boweryboogie.com/content/uploads/2014/07/Bayern-Munchen-Black-Background-Wallpaper-.jpg" alt=""></a>
-						</article>
-
-						<article class="item thumb" data-width="282">
-							<h2>4. Barcelona</h2>
-							<a href="images/fulls/04.jpg" class="image"><img src="https://d2vd5uo799806j.cloudfront.net/4/b/5/4b5de1a8c59dd56dfc526c01ccf84581.jpeg" alt=""></a>
-						</article>
-
-						<article class="item thumb" data-width="400">
-							<h2>5. Liverpool</h2>
-							<a href="images/fulls/05.jpg" class="image"><img src="http://img0.cfstatic.com/wallpapers/da34f4f388b59fa7997bf9b0e291e60f_large.jpeg" alt=""></a>
 						</article>
 
 				</div>
