--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 						<div id="header" class="item" data-width="400">
 							<div class="inner">
-								<h1>3 PLayers</h1>
+								<h1>3 Players</h1>
 								<p>Who Shook the Kop</p>
 							</div>
 						</div>
