--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 						<article class="item thumb" data-width="384">
 							<h2>2. Kenny Dalglish</h2>
-							<a href="images/fulls/02.jpg" class="image"><img src="https://acmilanfinance.files.wordpress.com/2013/07/cropped-ac-milan-logo-wallpaper.jpg" alt=""></a>
+							<a href="images/fulls/02.jpg" class="image"><img src="http://i.telegraph.co.uk/multimedia/archive/01793/avi-cohen_1793630b.jpg" alt=""></a>
 						</article>
 
 						<article class="item thumb" data-width="274">
