Ian Rush Picture Change

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 						<article class="item thumb" data-width="274">
 							<h2>3. Ian Rush</h2>
-							<a href="images/fulls/03.jpg" class="image"><img src="http://www.boweryboogie.com/content/uploads/2014/07/Bayern-Munchen-Black-Background-Wallpaper-.jpg" alt=""></a>
+							<a href="images/fulls/03.jpg" class="image"><img src="http://25.media.tumblr.com/tumblr_mdhktuforW1rctpiwo1_1280.jpg" alt=""></a>
 						</article>
 
 				</div>
