--- a/html5up-highlights/stevengerrard.html
+++ b/html5up-highlights/stevengerrard.html
@@ -20,7 +20,7 @@
 			<section id="header">
 				<header class="major">
 					<h1>Steven Gerrard</h1>
-					<p>The Skipper<a href="http://html5up.net">HTML5 UP</a></p>
+					<p>The Skipper</p>
 				</header>
 				<div class="container">
 					<ul class="actions">
