--- a/html5up-highlights/stevengerrard.html
+++ b/html5up-highlights/stevengerrard.html
@@ -46,7 +46,7 @@
 		<!-- Two -->
 			<section id="two" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="http://kaalin.com/uploads/article/photo/IMG_5EC924-898081-1927CC-9B75C4-BC16BB-2949A2.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>Stuff I do</h2>
