Stuff And things

--- a/html5up-highlights/stevengerrard.html
+++ b/html5up-highlights/stevengerrard.html
@@ -78,7 +78,7 @@
 		<!-- Three -->
 			<section id="three" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="http://img0.cfstatic.com/wallpapers/a0b6f83bc5f01565feed2cca66d7abe4_large.jpeg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>One more thing</h2>
