--- a/html5up-highlights/stevengerrard.html
+++ b/html5up-highlights/stevengerrard.html
@@ -51,7 +51,35 @@
 						<header class="major">
 							<h2>Career Stats</h2>
 						</header>
-						<p> Gerrard has 708 appearences in all comptetions for Liverpool and has scored 186 goals in all competitions. Currently, Gerrard has 10 appearences for MLS team LA Galaxy, and 1 goal. </p>
+						<table style="width:100%">
+     <tr>
+        <td> Liverpool </td>
+        <td> League </td>
+        <td> National Cup </td>
+        <td> League Cup </td>
+        <td> Continental</td>
+        <td> Other </td>
+        <td> Total </td>
+    </tr>
+    <tr>
+        <td> Appearances: </td>
+        <td> 504 </td>
+        <td> 42 </td>
+        <td> 30 </td>
+        <td> 128 </td>
+        <td> 4 </td>
+        <td> 708 </td>
+    </tr>
+
+    <tr>
+        <td> Goals </td>
+        <td> 120 </td>
+        <td> 15 </td>
+        <td> 9 </td>
+        <td> 41 </td>
+        <td> 1 </td>
+        <td> 186 </td>
+</table>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
