--- a/html5up-highlights/stevengerrard.html
+++ b/html5up-highlights/stevengerrard.html
@@ -51,7 +51,7 @@
 						<header class="major">
 							<h2>Career Stats</h2>
 						</header>
-						<table style="width:40%">
+						<table>
      <tr>
         <td> Liverpool </td>
         <td> League </td>
