--- a/html5up-highlights/stevengerrard.html
+++ b/html5up-highlights/stevengerrard.html
@@ -62,23 +62,21 @@
         <td> Total </td>
     </tr>
     <tr>
-        <td> Appearances: </td>
+        <td> Apps: </td>
         <td> 504 </td>
         <td> 42 </td>
         <td> 30 </td>
         <td> 128 </td>
-        <td> 4 </td>
-        <td> 708 </td>
+        <td> 704 </td>
     </tr>
 
     <tr>
-        <td> Goals </td>
+        <td> Goals: </td>
         <td> 120 </td>
         <td> 15 </td>
         <td> 9 </td>
         <td> 41 </td>
-        <td> 1 </td>
-        <td> 186 </td>
+        <td> 185 </td>
 </table>
 						</ul>
 					</div>
