--- a/html5up-highlights/stevengerrard.html
+++ b/html5up-highlights/stevengerrard.html
@@ -57,7 +57,7 @@
         <td> League </td>
         <td> National Cup </td>
         <td> League Cup </td>
-        <td> Continental</td>
+        <td> Champions League</td>
         <td> Total </td>
     </tr>
     <tr>
