--- a/html5up-highlights/stevengerrard.html
+++ b/html5up-highlights/stevengerrard.html
@@ -89,9 +89,9 @@
 					<span class="image fit primary"><img src="http://img0.cfstatic.com/wallpapers/a0b6f83bc5f01565feed2cca66d7abe4_large.jpeg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>One more thing</h2>
+							<h2> Achievements</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p> Gerrard won the FA Cup twice with Liverpool, once in 2001 and once in 2006. He has won the Football League Cup in 2001, 2003, and 2012. He has also won the FA Community Shield in 2006,the UEFA Champions League in 2005, the UEFA Cup in 2001 and the UEFA Super Cup in 2001 and 2005.</p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
