--- a/ianrush/ianrush.html
+++ b/ianrush/ianrush.html
@@ -20,6 +20,7 @@
 			<section id="header">
 				<header class="major">
 					<h1>Ian Rush</h1>
+					<p> The Ghost </p>
 				</header>
 				<div class="container">
 					<ul class="actions">
