--- a/html5up-highlights/stevengerrard.html
+++ b/html5up-highlights/stevengerrard.html
@@ -97,7 +97,22 @@
 			</section>
 
 		<!-- Four -->
-		<!--
+
+		<section id="three" class="main special">
+				<div class="container">
+					<span class="image fit primary"><img src="http://img0.cfstatic.com/wallpapers/a0b6f83bc5f01565feed2cca66d7abe4_large.jpeg" alt="" /></span>
+					<div class="content">
+						<header class="major">
+							<h2> Famous Goals</h2>
+						</header>
+						<iframe width="420" height="315" src="https://www.youtube.com/embed/kM5XP-Ps7tk" frameborder="0" allowfullscreen></iframe>
+					</div>
+					<a href="#footer" class="goto-next scrolly">Next</a>
+				</div>
+			</section>
+		  
+		  <!-- Five -->
+
 			<section id="four" class="main">
 				<div class="container">
 					<div class="content">
