--- a/html5up-highlights/stevengerrard.html
+++ b/html5up-highlights/stevengerrard.html
@@ -106,7 +106,7 @@
 							<h2> Famous Goals</h2>
 						</header>
 						<iframe width="420" height="315" src="https://www.youtube.com/embed/kM5XP-Ps7tk" frameborder="0" allowfullscreen></iframe>
-						<iframe width="420" height="315" src="https://www.youtube.com/embed/kM5XP-Ps7tk" frameborder="0" allowfullscreen></iframe>
+						<iframe width="420" height="315" src="https://www.youtube.com/embed/gyztjquwF7I" frameborder="0" allowfullscreen></iframe>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
